swen430as2/test_files/valid/null/Null_Valid_6.while
null get(null[] rs, int i) {
  return rs[i];
}

void main() {
    assert get([null],0) == null;
}