swen430as2/test_files/invalid/null/Null_Invalid_3-TC01.while
null[] f() {
    return [3];
}